--- a/final project/index.html
+++ b/final project/index.html
@@ -47,7 +47,7 @@
                             </div>
                             </a>
                         </li>
-                        <li>
+                        <li class="dropdown" data-toggle="dropdown">
                             <a href="#">
                             <div class="iconn">
                                 <i class="fa fa-cogs" aria-hidden="true"></i>
@@ -58,6 +58,12 @@
                             </span>
                             </div>
                             </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="products.html" target="_blanks">Laptop</a>
+                                <a class="dropdown-item" href="#">Mice</a>
+                                <a class="dropdown-item" href="#">Keyboard</a>
+                                <a class="dropdown-item" href="#">Headphone</a>
+                            </div>
                         </li>
                         <li>
                             <a href="#">
