--- a/final project/products.html
+++ b/final project/products.html
@@ -12,6 +12,367 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-    
+    <div class="container-fluid myRow">
+        <div class="row">
+            <nav class="navbar navbar-light navbar-expand-lg mainmenu fixed-top">
+                <div class="myIcon">
+                    <a href="#"><img class="icon" src="img/icons8-razer-64.png" alt=""></a>
+                </div>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse mainMenu" id="navbarSupportedContent">
+                    <ul class="myMenu">
+                        <li>
+                            <a href="#">
+                            <div class="iconn">
+                                <i class="fa fa-home" aria-hidden="true"></i>
+                                <i class="fa fa-home" aria-hidden="true"></i>
+                            </div>
+                            <div class="name"><span data-text="Home"> 
+                                Home
+                                </span>
+                            </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                            <div class="iconn">
+                                <i class="fa fa-file-text-o" aria-hidden="true"></i>
+                                <i class="fa fa-file-text-o" aria-hidden="true"></i>
+                            </div>
+                            <div class="name"><span data-text="About"> 
+                                About
+                            </span>
+                            </div>
+                            </a>
+                        </li>
+                        <li class="dropdown" data-toggle="dropdown">
+                            <a href="#">
+                            <div class="iconn">
+                                <i class="fa fa-cogs" aria-hidden="true"></i>
+                                <i class="fa fa-cogs" aria-hidden="true"></i>
+                            </div>
+                            <div class="name"><span data-text="Products"> 
+                                Products
+                            </span>
+                            </div>
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="#">Laptop</a>
+                                <a class="dropdown-item" href="#">Mice</a>
+                                <a class="dropdown-item" href="#">Keyboard</a>
+                                <a class="dropdown-item" href="#">Headphone</a>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#">
+                            <div class="iconn">
+                                <i class="fa fa-picture-o" aria-hidden="true"></i>
+                                <i class="fa fa-picture-o" aria-hidden="true"></i>
+                            </div>
+                            <div class="name"><span data-text="Portfolio"> 
+                                Portfolio
+                            </span>
+                            </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                            <div class="iconn">
+                                <i class="fa fa-users" aria-hidden="true"></i>
+                                <i class="fa fa-users" aria-hidden="true"></i>
+                            </div>
+                            <div class="name"><span data-text="Team"> 
+                                Team
+                            </span>
+                            </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                            <div class="iconn">
+                                <i class="fa fa-envelope" aria-hidden="true"></i>
+                                <i class="fa fa-envelope" aria-hidden="true"></i>
+                            </div>
+                            <div class="name"><span data-text="Contact"> 
+                                Contact
+                            </span>
+                            </div>
+                            </a>
+                        </li>                 
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        <div class="row">
+            <div class="jumbotron-fluid jumbotron">
+                <div class="container">
+                    <h3>GAMING LAPTOPS & DESKTOPS</h3>
+                    <h5>Explore a complete arsenal of gaming laptops to suit your needs—both work and play. Experience only the best graphics on a superior display, backed by a system that's powered with the latest in technology.</h5>
+                    <div class="iconLaptop">
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <div class="iconHover">
+                                            <img src="img/blade-13-gray.svg" alt="b13">
+                                            <img src="img/blade-13-green.svg" alt="b13">
+                                    </div>
+                                    <div class="name"><span> 
+                                        13"
+                                    </span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="iconHover">
+                                            <img src="img/blade-15-studio-grey.svg" alt="b15">
+                                            <img src="img/blade-15-studio-green.svg" alt="b15">
+                                    </div>
+                                    <div class="name"><span> 
+                                        15"
+                                    </span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="iconHover">
+                                            <img src="img/blade-17-gray.svg" alt="b17">
+                                            <img src="img/blade-17-green.svg" alt="b17">
+                                    </div>
+                                    <div class="name"><span> 
+                                        17"
+                                    </span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="iconHover">
+                                            <img src="img/blade-15-studio-grey.svg" alt="bStudio">
+                                            <img src="img/blade-15-studio-green.svg" alt="bStudio">
+                                    </div>
+                                    <div class="name"><span> 
+                                        Studio"
+                                    </span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="iconHover">
+                                            <img src="img/desktop-gray.svg" alt="eGpu">
+                                            <img src="img/desktop-green.svg" alt="eGpu">
+                                    </div>
+                                    <div class="name"><span> 
+                                        eGPU
+                                    </span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="iconHover">
+                                            <img src="img/blade-refurb-gray.svg" alt="Re">
+                                            <img src="img/blade-refurb-green.svg" alt="Re">
+                                    </div>
+                                    <div class="name"><span> 
+                                        Refurb
+                                    </span>
+                                    </div>
+                                </a>
+                            </li>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-md-4">
+                    <div class="product">
+                        <div class="card">
+                            <div class="imgPd">
+                                 <img src="img/corechroma.png" alt="chroma" width="100%">
+                            </div>
+                            <div class="contentPd">
+                                <h2>Razer Core X Chroma</h2>
+                                <div class="color">
+                                    <h3>color</h3>
+                                    <span></span>
+                                    <span></span>
+                                </div>
+                                <a href="#">Shop now ></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-4">
+                    <div class="product">
+                        <div class="card">
+                            <div class="imgPd">
+                                 <img src="img/blade15.png" alt="b15" width="100%">
+                            </div>
+                            <div class="contentPd">
+                                <h2>Razer Blade Steath 15</h2>
+                                <div class="color">
+                                    <h3>color</h3>
+                                    <span></span>
+                                    <span></span>
+                                </div>
+                                <a href="#">Shop now ></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-4">
+                    <div class="product">
+                        <div class="card">
+                            <div class="imgPd">
+                                 <img src="img/blade17.png" alt="b15" width="100%">
+                            </div>
+                            <div class="contentPd">
+                                <h2>Razer Blade Steath 17</h2>
+                                <div class="color">
+                                    <h3>color</h3>
+                                    <span></span>
+                                    <span></span>
+                                </div>
+                                <a href="#">Shop now ></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <div class="row">
+        <div class="blade13">
+            <div class="cubeVideo">
+                <div class="boxV">
+                    <div>
+                        <span><video src="video/Razer Blade Stealth 13 - See Faster. Game Faster. Go Faster. (3).mp4" autoplay="" muted="" loop=""></video></span>
+                        <span><video src="video/Razer Blade Stealth 13 - See Faster. Game Faster. Go Faster. (3).mp4" autoplay="" muted="" loop=""></video></span>
+                        <span><video src="video/Razer Blade Stealth 13 - See Faster. Game Faster. Go Faster. (3).mp4" autoplay="" muted="" loop=""></video></span>
+                    </div>
+                </div>
+            </div>
+            <h2>Razer blade stealth 13</h2>
+            <h4>The world's first gaming ultrabook</h4>
+            <div>
+                <a href="#">Buy Now <span>></span></a> 
+                <a href="#">Learn More <span>></span></a>
+            </div>
+            <div class="boxB">
+                <span class="border"></span>
+                <a href="#">Preview</a>
+            </div>
+        </div>
+        <div class="blade15">
+            
+            <div class="bannerV">
+                <video src="video/Razer Blade 15 - Optical Keyboard (2019).mp4" autoplay muted loop></video>
+                <h2>RAZER</h2>
+            </div>
+            <h2>Razer Blade 15</h2>
+            <h4>Mobile 15-inch Gaming Laptop with up to 8-Cores and GeForce® graphics</h4>
+            <div>
+                <a href="#">Buy Now <span>></span></a> 
+                <a href="#">Learn More <span>></span></a>
+            </div>
+            <div class="boxB boxB15">
+                <span class="border"></span>
+                <a href="#">Preview</a>
+            </div>
+        </div>
+        <div class="blade17">
+            <div class="content17">
+                <h2>RAZER BLADE PRO 17</h2>
+                <p>Performance pushed to the edge</p>
+                <p>The Razer Blade Pro 17 is surpassing new bounds, with a footprint nearly 25% smaller than its predecessor and a screen that is even faster, gaming on the go is easier than ever. Powered with the latest 9th generation Intel® Core™ i7-9750H processor and NVIDIA® GeForce RTX™ series graphics the Razer Blade Pro delivers desktop gaming performance with the mobility to create wherever inspiration strikes.</p>
+                <div>
+                    <a href="#">Buy Now <span>></span></a> 
+                    <a href="#">Learn More <span>></span></a>
+                </div>
+            </div>
+            <div class="boxB box17">
+                <span class="border"></span>
+                <a href="#">Preview</a>
+            </div>
+        </div>
+        <div class="bladeStudio">
+            <div class="contentS">
+                <h2>RAZER BLADE PRO 17</h2>
+                <p>Performance pushed to the edge</p>
+                <p>The Razer Blade Pro 17 is surpassing new bounds, with a footprint nearly 25% smaller than its predecessor and a screen that is even faster, gaming on the go is easier than ever. Powered with the latest 9th generation Intel® Core™ i7-9750H processor and NVIDIA® GeForce RTX™ series graphics the Razer Blade Pro delivers desktop gaming performance with the mobility to create wherever inspiration strikes.</p>
+                <div>
+                    <a href="#">Buy Now <span>></span></a> 
+                    <a href="#">Learn More <span>></span></a>
+                </div>
+            </div>
+        </div>
+        <div class="monitor">
+            <h2>Razer Raptor</h2>
+            <h4>The Ultimate Esports Gaming Monitor</h4>
+            <div>
+                <a href="#">Buy Now <span>></span></a> 
+                <a href="#">Learn More <span>></span></a>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div>
+        <footer>
+            <div class="social">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span><i class="fa fa-facebook" aria-hidden="true"></i></span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span><i class="fa fa-twitter" aria-hidden="true"></i></span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span><i class="fa fa-google-plus" aria-hidden="true"></i></span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span><i class="fa fa-linkedin" aria-hidden="true"></i></span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span><i class="fa fa-instagram" aria-hidden="true"></i></span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
