--- a/btjs/index.html
+++ b/btjs/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="js/script.js"></script>
+    
+    <script src="js/dateAndMonth.js"></script>
 </body>
 </html>
