--- a/btjs/index.html
+++ b/btjs/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     
-    <script src="js/dateAndMonth.js"></script>
+    <script src="js/firstHomework.js"></script>
 </body>
 </html>
