--- a/btjs/index.html
+++ b/btjs/index.html
@@ -7,8 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>asdsad</h1>
+    <h1>asdasddddddddd</h1>
+    <button class="btn-click">
+        <p>Click me</p>
+    </button>
     
-    <script src="js/Object.js"></script>
+    <script src="js/dom.js"></script>
 </body>
 </html>
 
