--- a/btjs/index.html
+++ b/btjs/index.html
@@ -13,7 +13,7 @@
         <p>Click me</p>
     </button>
     
-    <script src="js/dom.js"></script>
+    <script src="js/Object.js"></script>
 </body>
 </html>
 
