--- a/index.html
+++ b/index.html
@@ -1,60 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="style.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
+
 <body>
-<div class="container">
-    <div class="row">
-        <div class="myCv">
-                    <div class="imgCv d-flex justify-content-center">
-                        <img src="img/img.JPEG" alt="">
-                    </div>
-                    <div class="info">
-                        <h3 class="d-flex justify-content-center">Nguyễn Nhựt Thiên</h3>
-                        <h4 class="d-flex justify-content-center">Front-end Developer</h4>
-                    </div>
-                    <div class="content">
-                        <div class="box">
-                            <div class="icon">
-                                <i class="fa fa-birthday-cake" aria-hidden="true"></i>
-                                <h4>Date of birth</h4>
-                                <h3>11/01/1996</h3>
-                            </div>
-                                <div class="icon">
-                                    <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                    <h4>Address</h4>
-                                    <h3>Cu Chi, TPHCM, Vietnam</h3>
-                                </div>
-                                <div class="icon">
-                                    <i class="fa fa-phone" aria-hidden="true"></i>
-                                    <h4>Mobile</h4>
-                                    <h3>+84344839079</h3>
-                                </div>
-                                <div class="icon">
-                                    <i class="fa fa-envelope" aria-hidden="true"></i>
-                                    <h4>Email</h4>
-                                    <h3>nguyennhutthien96@gmail.com</h3>
-                                </div>
-                                <div class="icon">
-                                    <i class="fa fa-globe" aria-hidden="true"></i>
-                                    <h4>Language</h4>
-                                    <h3>English</h3>
-                                </div>
+    <div class="container">
+        <div class="row">
+            <div class="myCv">
+                <div class="imgCv d-flex justify-content-center">
+                    <img src="img/img.JPEG" alt="">
+                </div>
+                <div class="info">
+                    <h3 class="d-flex justify-content-center">Nguyễn Nhựt Thiên</h3>
+                    <h4 class="d-flex justify-content-center">Front-end Developer</h4>
+                </div>
+                <div class="content">
+                    <div class="box">
+                        <div class="icon">
+                            <i class="fa fa-birthday-cake" aria-hidden="true"></i>
+                            <h4>Date of birth</h4>
+                            <h3>11/01/1996</h3>
+                        </div>
+                        <div class="icon">
+                            <i class="fa fa-map-marker" aria-hidden="true"></i>
+                            <h4>Address</h4>
+                            <h3>Cu Chi, TPHCM, Vietnam</h3>
+                        </div>
+                        <div class="icon">
+                            <i class="fa fa-phone" aria-hidden="true"></i>
+                            <h4>Mobile</h4>
+                            <h3>+84344839079</h3>
+                        </div>
+                        <div class="icon">
+                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                            <h4>Email</h4>
+                            <h3>nguyennhutthien96@gmail.com</h3>
+                        </div>
+                        <div class="icon">
+                            <i class="fa fa-globe" aria-hidden="true"></i>
+                            <h4>Language</h4>
+                            <h3>English</h3>
                         </div>
                     </div>
-                        <h3 class="d-flex justify-content-center">Skills</h3>
-                    <div class="mySkill">
+                </div>
+                <h3 class="d-flex justify-content-center">Skills</h3>
+                <div class="mySkill">
+                    <div class="skill">
+                        <div class="card">
+                            <div class="boxx">
+                                <div class="percent">
+                                    <svg>
+                                        <circle cx="70" cy="70" r="70"></circle>
+                                        <circle cx="70" cy="70" r="70"></circle>
+                                    </svg>
+                                    <div class="number">
+                                        <h2>80<span>%</span></h2>
+                                    </div>
+                                </div>
+                                <h2 class="text">Html</h2>
+                            </div>
+                        </div>
                         <div class="skill">
-                            <div class="card">
+                            <div class="card card1">
                                 <div class="boxx">
                                     <div class="percent">
                                         <svg>
@@ -62,86 +79,78 @@
                                             <circle cx="70" cy="70" r="70"></circle>
                                         </svg>
                                         <div class="number">
-                                            <h2>80<span>%</span></h2>
+                                            <h2>90<span>%</span></h2>
                                         </div>
                                     </div>
-                                    <h2 class="text">Html</h2>
+                                    <h2 class="text">css</h2>
                                 </div>
                             </div>
-                            <div class="skill">
-                                <div class="card card1">
-                                    <div class="boxx">
-                                        <div class="percent">
-                                            <svg>
-                                                <circle cx="70" cy="70" r="70"></circle>
-                                                <circle cx="70" cy="70" r="70"></circle>
-                                            </svg>
-                                            <div class="number">
-                                                <h2>90<span>%</span></h2>
-                                            </div>
+                        </div>
+                        <div class="skill">
+                            <div class="card card2">
+                                <div class="boxx">
+                                    <div class="percent">
+                                        <svg>
+                                            <circle cx="70" cy="70" r="70"></circle>
+                                            <circle cx="70" cy="70" r="70"></circle>
+                                        </svg>
+                                        <div class="number">
+                                            <h2>70<span>%</span></h2>
                                         </div>
-                                        <h2 class="text">css</h2>
                                     </div>
-                                </div>
-                            </div>
-                            <div class="skill">
-                                <div class="card card2">
-                                    <div class="boxx">
-                                        <div class="percent">
-                                            <svg>
-                                                <circle cx="70" cy="70" r="70"></circle>
-                                                <circle cx="70" cy="70" r="70"></circle>
-                                            </svg>
-                                            <div class="number">
-                                                <h2>70<span>%</span></h2>
-                                            </div>
-                                        </div>
-                                        <h2 class="text">javascript</h2>
-                                    </div>
+                                    <h2 class="text">javascript</h2>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="profile">
-                        <h3>Education</h3>
-                        <div class="boxxx">
-                            <div class="tittle"></div>
-                            <div class="contentt">
-                                <p>2014-2017: Information Technology at <a href="https://www.viendong.edu.vn/" target="_blanks" title="Viendong College">Vien Dong College</a></p>
-                                <p>2020: Front-end Developer at <a href="https://nordiccoder.com/" target="_blanks" title="Nordic Coder">Nordic Coder</a></p>
-                            </div>
+                </div>
+                <div class="profile">
+                    <h3>Education</h3>
+                    <div class="boxxx">
+                        <div class="tittle"></div>
+                        <div class="contentt">
+                            <p>2014-2017: Information Technology at <a href="https://www.viendong.edu.vn/"
+                                    target="_blanks" title="Viendong College">Vien Dong College</a></p>
+                            <p>2020: Front-end Developer at <a href="https://nordiccoder.com/" target="_blanks"
+                                    title="Nordic Coder">Nordic Coder</a></p>
                         </div>
                     </div>
-                    <div class="profile">
-                        <h3>Work Expericene</h3>
-                        <div class="boxxx boxxx1">
-                            <div class="tittle"></div>
-                            <div class="contentt">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, reiciendis aperiam voluptatibus maxime doloribus tenetur iure? Saepe dolorem eveniet voluptates porro? Porro at incidunt iure aperiam aliquid repudiandae consectetur eos.</p>
-                            </div>
+                </div>
+                <div class="profile">
+                    <h3>Strengths</h3>
+                    <div class="boxxx boxxx1">
+                        <div class="tittle"></div>
+                        <div class="contentt">
+                            <p>Team work skills</p>
+                            <p>- Willingness to learn and use novel technologies</p>
                         </div>
                     </div>
-                    <div class="profile">
-                        <h3>Lorem ipsum dolor sit amet</h3>
-                        <div class="boxxx boxxx2">
-                            <div class="tittle"></div>
-                            <div class="contentt">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, reiciendis aperiam voluptatibus maxime doloribus tenetur iure? Saepe dolorem eveniet voluptates porro? Porro at incidunt iure aperiam aliquid repudiandae consectetur eos.</p>
-                            </div>
+                </div>
+                <div class="profile">
+                    <h3>Objective</h3>
+                    <div class="boxxx boxxx2">
+                        <div class="tittle"></div>
+                        <div class="contentt">
+                            <p>To work in a dynamic and professional environment where I could develop myself and have a
+                                scope for advancement</p>
+                            <p>To create value and recognition in the workplace by producing the best result for the
+                                organization through my creativity and capabilities</p>
                         </div>
                     </div>
-                    <div class="profile">
-                        <h3>Lorem ipsum dolor sit amet</h3>
-                        <div class="boxxx">
-                            <div class="tittle"></div>
-                            <div class="contentt">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, reiciendis aperiam voluptatibus maxime doloribus tenetur iure? Saepe dolorem eveniet voluptates porro? Porro at incidunt iure aperiam aliquid repudiandae consectetur eos.</p>
-                            </div>
+                </div>
+                <div class="profile">
+                    <h3>More Skills</h3>
+                    <div class="boxxx">
+                        <div class="tittle"></div>
+                        <div class="contentt">
+                            <p>React, Redux, Material Ui, Ant Design, Bootstrap, SASS/SCSS, Github </p>
                         </div>
                     </div>
+                </div>
+            </div>
+
         </div>
-   
     </div>
-</div>
 </body>
+
 </html>
