--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                     <div class="boxxx boxxx1">
                         <div class="tittle"></div>
                         <div class="contentt">
-                            <p>Team work skills</p>
-                            <p>- Willingness to learn and use novel technologies</p>
+                            <p>Teamwork</p>
+                            <p>Willingness to learn and use novel technologies</p>
                         </div>
                     </div>
                 </div>
