--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <div class="boxxx">
                         <div class="tittle"></div>
                         <div class="contentt">
-                            <p>React, Redux, RESTful API Material Ui, Ant Design, Bootstrap, SASS/SCSS, Github </p>
+                            <p>React, Redux, RESTful API, Material Ui, Ant Design, Bootstrap, SASS/SCSS, Github </p>
                         </div>
                     </div>
                 </div>
