--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -121,8 +121,8 @@
                     <div class="boxxx boxxx1">
                         <div class="tittle"></div>
                         <div class="contentt">
-                            <p>Teamwork</p>
-                            <p>Willingness to learn and use novel technologies</p>
+                            <p>- Teamwork</p>
+                            <p>- Willingness to learn and use novel technologies</p>
                         </div>
                     </div>
                 </div>
@@ -131,9 +131,9 @@
                     <div class="boxxx boxxx2">
                         <div class="tittle"></div>
                         <div class="contentt">
-                            <p>To work in a dynamic and professional environment where I could develop myself and have a
+                            <p>- To work in a dynamic and professional environment where I could develop myself and have a
                                 scope for advancement</p>
-                            <p>To create value and recognition in the workplace by producing the best result for the
+                            <p>- To create value and recognition in the workplace by producing the best result for the
                                 organization through my creativity and capabilities</p>
                         </div>
                     </div>
@@ -144,6 +144,22 @@
                         <div class="tittle"></div>
                         <div class="contentt">
                             <p>React, Redux, RESTful API, Material Ui, Ant Design, Bootstrap, SASS/SCSS, Github </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile">
+                    <h3>Experience</h3>
+                    <div class="boxxx boxxx1">
+                        <div class="tittle"></div>
+                        <div class="contentt">
+                            <p>2017-2018: Call Center TNHH MTV Niềm Tin Việt</p>
+                                <p>- Support to provided information about services of Viettel </p>
+                                <p>- Handle customer complain about services</p>
+                                <p>- Support and resolve problem in process of using services mobile and internet of Viettel </p>
+                            <p>2018-2019:Technical support FPT Retail</p>
+                                <p>- Receive warranty</p>
+                                <p>- Support and install application for laptop and mobile</p>
+                                <p>- Other tasks assigned by manager</p>
                         </div>
                     </div>
                 </div>
